[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TikTokMarketing"
version = "0.1.4"
authors = [
  { name="Casper Crause", email="ccrause07@gmail.com" },
]
description = "A package designed to connect to the TikTok Marketing API and return data to report on."
readme = "README.md"
requires-python = ">=3.8.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
